<resources>
    <string name="app_name">BoxPrintAndroid</string>
    <string name="title_home">Home</string>
    <string name="title_order">Orders</string>
    <string name="title_chat">Chats</string>
    <string name="title_account">Account</string>
    <string name="title_notification">Notifications</string>

    <string name="your_location">Your Location</string>
    <string name="it_is_location">Current Location</string>
    <string name="label_actionbar">Label</string>
    <string name="titleProduct">Poster A3 Doff</string>
    <string name="titlePrice">Rp10.000</string>
    
    //Store
    <string name="name">This is name</string>
    <string name="address">Address</string>
    <string name="rate">Rate</string>
    <string name="open">open</string>
    <string name="start">Start</string>
    <string name="until">-</string>
    <string name="end">End</string>
    <string name="title_category">Category</string>
    <string name="details_product">Cetak per lembar minimal 10 halaman</string>

    //Account
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_my_product">Produk Saya</string>
    <string name="title_logout">Keluar</string>

    //List Item
    <string name="item_name">Nama Item</string>
    <string name="price">Price</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="with_cardview">with CardView</string>

    //Edit Profile
    <string name="label_name">Name</string>
    <string name="label_username">Username</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="label_set_location">Set Location Address</string>
    <string name="account_number">Account Number</string>
    <string name="your_location">Your Location</string>
    <string name="label_open">Open</string>
    <string name="label_button_save">SAVE</string>

    //Chat
    <string name="name_chat">Name</string>
    <string name="chat">Hai lorem ipsum dolor sit amet</string>
    <string name="time_chat">19.08</string>
    
    //Signup
    <string name="label_welcome">Welcome.</string>
    <string name="description_sign_up">Create a new account</string>
    <string name="slogan">make your work easier</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_pass">Confirm Password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="question_sign_up">Already have an account ? Login</string>

    //Login
    <string name="button_login">Login</string>
    <string name="description_login">Use your account to continue</string>
    <string name="label_welcome_back">Welcome Back.</string>
    <string name="question_login">Havent an account? Sign Up</string>

    //Started
    <string name="tagline">Make Your Work Easier</string>

    //Order
    <string name="status_order">On Process</string>
    <string name="history_and_date">Finished on 13 January, 16.30</string>

</resources>
